# nyxguard

./: .editorconfig  .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml
.github/workflows/: android-ci.yml  backend-ci.yml  release.yml
Docs/: android-setup.md  功能设计说明书.md  数据库设计说明书.md  整体架构图.md  需求规格说明书.md
Docs/QA/: LOCAL_REGRESSION.md
android/: local.properties.example  settings.gradle.kts
app/: build.gradle.kts
backend/: .dockerignore  .env.example  .env.local.example  .env.preview.example  .env.production.example  DEPLOYMENT.md  Dockerfile  Procfile  README.md  ai_guardian.py  app.py  auth_utils.py  bootstrap_schema.py  config.py  database.py  deps.py  index.py  main.py  models.py  notification_events.py  pyproject.toml  requirements.txt  schema_compat.py  schemas.py  server.py  vercel.json
backend/routers/: __init__.py  auth.py  chat.py  guardian_links.py  guardians.py  notifications.py  push_tokens.py  trips.py  user.py  v2.py
backend/services/: __init__.py  push_delivery.py  sos_media.py  watchdog.py
backend/tests/: test_guardian_links.py  test_guardian_mode_api.py  test_sos_media_watchdog.py  test_v2_api.py
docs/: API_CONTRACT_DUAL_ROLE_V1.md  api.md  architecture.md  backend-setup.md
gradle/: gradle-daemon-jvm.properties  libs.versions.toml
scripts/: API_SMOKE.md  android_capture_state.sh  android_logcat_session.sh  api_smoke.py  mock_walk.sh  run_local_regression_prep.sh
(+221 files in other folders)
